# crossMQTT-proxy

./: .gitignore  .pre-commit-config.yaml  README.md  config.json.example  main.py  pyproject.toml  requirements.txt
bridge/: main.py
systemd/: crossMQTT-proxy.service
